--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <script src="../assets/vendors/jscrollpane/script/jquery.jscrollpane.min.js"></script>
     <script src="../assets/vendors/spin.js/spin.js"></script>
     <script src="../assets/vendors/ladda/dist/ladda.min.js"></script>
-    <script src="../assets/vendors/select2/dist/js/select2.full.min.js"></script>
+    <!-- <script src="../assets/vendors/select2/dist/js/select2.full.min.js"></script> -->
     <script src="../assets/vendors/html5-form-validation/dist/jquery.validation.min.js"></script>
     <script src="../assets/vendors/jquery-typeahead/dist/jquery.typeahead.min.js"></script>
     <script src="../assets/vendors/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
